# bevy_prototype_frametime_display_plugin

./: .gitignore  Cargo.toml  README.md
assets/shaders/: frametime_display.wgsl
examples/: 3d_scene.rs
src/: frametime_display.wgsl  lib.rs  main.rs  material.rs  overlay_node.rs  pipeline.rs  plugin.rs
