[package]
name = "bevy_prototype_frametime_display_plugin"
version = "0.1.0"
license-file = "LICENSE"
description = "A plugin to show the frametimes in a bevy app"
homepage = "https://github.com/IceSentry/bevy_prototype_frametime_display_plugin"
repository = "https://github.com/IceSentry/bevy_prototype_frametime_display_plugin"
readme = "README.md"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f28b92120920f387020f3b3e858f0e7039b9c07e", version = "0.8.0-dev", default-features = false, features = [
    "render",
] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f28b92120920f387020f3b3e858f0e7039b9c07e" }
